--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,12 @@ python:
   - "pypy"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt
+install: 
+    - pip install -r requirements.txt
+    - coverage coveralls
 
 # command to run tests, e.g. python setup.py test
-script: nosetests
+script: nosetests --with-coverage
+
+after_success:
+    coveralls
