--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
     - pip install -r requirements.txt
-    - coverage coveralls
+    - pip install coverage coveralls
 
 # command to run tests, e.g. python setup.py test
 script: nosetests --with-coverage
